feat: many things

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,30 @@
-# Configuração do ModBot (Discord Bot + API REST)
-# Copie este arquivo para .env e preencha com suas credenciais
+# AegisCore SaaS - Environment Variables
+# Copy this file to .env and fill in your values
 
 # ========================================
-# OBRIGATÓRIO - Google Perspective API Key
+# DATABASE (PostgreSQL)
 # ========================================
-# Obtenha em: https://console.cloud.google.com/
-PERSPECTIVE_API_KEY=sua_api_key_aqui
+DATABASE_URL=postgresql://username:password@host:port/database
 
 # ========================================
-# API REST (opcional se usar apenas Discord Bot)
+# JWT Authentication
 # ========================================
-# Porta da API (padrão: 3000)
-API_PORT=3000
-
-# Chave secreta para endpoints protegidos (MUDE ESTA CHAVE!)
-API_SECRET_KEY=sua-chave-super-secreta-aqui-mude-isso
+JWT_SECRET=your-super-secret-key-min-32-characters-long-change-in-production!
 
 # ========================================
-# CONFIGURAÇÕES DE MODERAÇÃO
+# Google Perspective API
 # ========================================
-TOXICITY_THRESHOLD=0.7          # Limite de toxicidade (0.0 a 1.0)
-SEVERE_TOXICITY_THRESHOLD=0.8   # Limite de toxicidade severa
-MUTE_DURATION=600000            # Duração do mute em milissegundos (600000 = 10 minutos)
-MAX_WARNINGS=3                  # Número máximo de avisos antes do mute
+# Get your key at: https://developers.perspectiveapi.com/
+PERSPECTIVE_API_KEY=your_perspective_api_key
+
+# ========================================
+# Application URLs
+# ========================================
+API_URL=http://localhost:5050
+FRONTEND_URL=http://localhost:5100
+
+# ========================================
+# Moderation Settings
+# ========================================
+TOXICITY_THRESHOLD=0.7
+SEVERE_TOXICITY_THRESHOLD=0.9
