--- a/AegisCoreApi/appsettings.json
+++ b/AegisCoreApi/appsettings.json
@@ -2,8 +2,33 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=aegiscore;Username=postgres;Password=postgres"
+  },
+  
+  "Jwt": {
+    "Secret": "your-super-secret-key-min-32-characters-long!",
+    "Issuer": "AegisCore",
+    "Audience": "AegisCoreUsers",
+    "ExpiresInDays": 7
+  },
+  
+  "PerspectiveApi": {
+    "ApiKey": ""
+  },
+  
+  "Cors": {
+    "Origins": "http://localhost:5000,https://localhost:5001,http://localhost:5100"
+  },
+  
+  "RateLimiting": {
+    "Enabled": true,
+    "DefaultLimitPerDay": 100
+  }
 }
