feat: best fixes

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,4 @@ ca-certificate.crt
 certificate.pem
 private-key.key
 
-DEPLOY.md
-
-AegisCoreApi/.env.production
-AegisCoreWeb/.env.production
+*Migrations*/
