feat: improvements variables

--- a/AegisCoreWeb/appsettings.Development.json
+++ b/AegisCoreWeb/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+  
+  "Urls": {
+    "Api": "http://localhost:5050",
+    "Frontend": "http://localhost:5100"
   }
 }
