--- a/AegisCoreWeb/appsettings.json
+++ b/AegisCoreWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   
-  "ApiSettings": {
-    "BaseUrl": "http://localhost:5050"
+  "Urls": {
+    "Api": "http://localhost:5050"
   }
 }
