--- a/AegisCoreWeb/appsettings.Production.json
+++ b/AegisCoreWeb/appsettings.Production.json
@@ -15,7 +15,8 @@
     }
   },
   
-  "ApiSettings": {
-    "BaseUrl": "https://api.aegiscore.giovannidev.com"
+  "Urls": {
+    "Api": "https://api.aegiscore.giovannidev.com",
+    "Frontend": "https://aegiscore.giovannidev.com"
   }
 }
