--- a/AegisCoreApi/appsettings.Development.json
+++ b/AegisCoreApi/appsettings.Development.json
@@ -1,8 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
+  },
+  
+  "Urls": {
+    "Api": "http://localhost:5050",
+    "Frontend": "http://localhost:5100"
+  },
+  
+  "Cors": {
+    "Origins": "http://localhost:5100,http://localhost:5101,https://localhost:5101"
   }
 }
