--- a/AegisCoreApi/appsettings.Production.json
+++ b/AegisCoreApi/appsettings.Production.json
@@ -16,6 +16,11 @@
     }
   },
   
+  "Urls": {
+    "Api": "https://api.aegiscore.giovannidev.com",
+    "Frontend": "https://aegiscore.giovannidev.com"
+  },
+  
   "Jwt": {
     "Issuer": "AegisCore",
     "Audience": "AegisCoreUsers",
