--- a/AegisCoreApi/appsettings.json
+++ b/AegisCoreApi/appsettings.json
@@ -8,23 +8,37 @@
   },
   "AllowedHosts": "*",
   
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=aegiscore;Username=postgres;Password=postgres"
+  "Database": {
+    "Host": "your-database-host-here",
+    "Port": 5432,
+    "Name": "postgres",
+    "Username": "postgres",
+    "Password": "your-database-password-here"
   },
   
   "Jwt": {
-    "Secret": "your-super-secret-key-min-32-characters-long!",
+    "Secret": "AegisCore-Super-Secret-Key-For-JWT-Token-2025!",
     "Issuer": "AegisCore",
     "Audience": "AegisCoreUsers",
     "ExpiresInDays": 7
   },
   
   "PerspectiveApi": {
-    "ApiKey": ""
+    "ApiKey": "your-perspective-api-key-here"
+  },
+  
+  "Moderation": {
+    "ToxicityThreshold": 0.4,
+    "SevereToxicityThreshold": 0.8
+  },
+  
+  "Urls": {
+    "Api": "http://localhost:5050",
+    "Frontend": "http://localhost:5100"
   },
   
   "Cors": {
-    "Origins": "http://localhost:5000,https://localhost:5001,http://localhost:5100"
+    "Origins": "http://localhost:5100,https://localhost:5101"
   },
   
   "RateLimiting": {
