feat: deploy on railway

--- a/AegisCoreApi/appsettings.json
+++ b/AegisCoreApi/appsettings.json
@@ -9,26 +9,26 @@
   "AllowedHosts": "*",
   
   "Database": {
-    "Host": "your-database-host-here",
+    "Host": "localhost",
     "Port": 5432,
-    "Name": "postgres",
+    "Name": "aegiscore",
     "Username": "postgres",
-    "Password": "your-database-password-here"
+    "Password": "postgres"
   },
   
   "Jwt": {
-    "Secret": "AegisCore-Super-Secret-Key-For-JWT-Token-2025!",
+    "Secret": "AegisCore-Dev-Secret-Key-Min-32-Characters!",
     "Issuer": "AegisCore",
     "Audience": "AegisCoreUsers",
     "ExpiresInDays": 7
   },
   
   "PerspectiveApi": {
-    "ApiKey": "your-perspective-api-key-here"
+    "ApiKey": ""
   },
   
   "Moderation": {
-    "ToxicityThreshold": 0.4,
+    "ToxicityThreshold": 0.5,
     "SevereToxicityThreshold": 0.8
   },
   
