refactor: remove WeatherForecast

--- a/AegisCoreApi/appsettings.json
+++ b/AegisCoreApi/appsettings.json
@@ -28,21 +28,10 @@
   },
   
   "Moderation": {
-    "ToxicityThreshold": 0.5,
-    "SevereToxicityThreshold": 0.8
-  },
-  
-  "Urls": {
-    "Api": "http://localhost:5050",
-    "Frontend": "http://localhost:5100"
+    "ToxicityThreshold": 0.5
   },
   
   "Cors": {
-    "Origins": "http://localhost:5100,https://localhost:5101"
-  },
-  
-  "RateLimiting": {
-    "Enabled": true,
-    "DefaultLimitPerDay": 100
+    "Origins": "*"
   }
 }
